fix: body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    ovwerflow-x: hidden;
+    overflow-x: hidden;
 }
 
 a{
